# copa

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.toml.example  generate-icons.sh
docs/: README.md  WIN_USE.md
docs/app/: config.json  index.html  manifest.json
docs/app/assets/: index-B33aaovg.js  index-B8HuVxN3.css  index-BpUOT4zt.js  index-CzfgVCMs.js  index-Q3m15Sop.css  index-ucB42alf.css
src/: lib.rs  main.rs  mqtt.rs
web/: generate-icons.sh  index.html  package.json  tsconfig.json  ui.html  vite.config.ts
web/public/: sw.js
web/scripts/: render-svg.js
web/src/: app.tsx  db.ts  main.tsx  types.ts
web/src/components/: AppHeader.tsx  ClipboardPanel.tsx  GpsShare.tsx  KeyQRModal.tsx  MqttServerForm.tsx  QRDisplay.tsx  QRScanner.tsx  ServerDrawer.tsx  ServerForm.tsx  ShareableLink.tsx  ThemeToggle.tsx  Toast.tsx
web/src/hooks/: useClipboard.ts  useMqtt.ts  useTheme.ts  useWebSocket.ts
web/src/styles/: global.css
web/src/utils/: crypto.ts  mqttPublish.ts
