[package]
name = "copa"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "copasrv"
path = "src/main.rs"

[[bin]]
name = "copacli"
path = "src/bin/copacli.rs"

[[bin]]
name = "copa-tray"
path = "src/bin/copa-tray.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
clap = { version = "=4.4.18", features = ["derive", "env"] }
rand = "0.8"
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
ureq = "2"
anyhow = "1"
rumqttc              = { version = "0.24", features = ["websocket", "use-rustls"] }
aes-gcm              = "0.10"
sha2                 = "0.10"
bs58                 = "0.5"
base64               = "0.22"
serde_json           = "1"
rustls               = "0.22"
rustls-native-certs  = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.14"
winit     = "0.29"
arboard   = "3"
image     = { version = "0.24", default-features = false, features = ["png"] }
